Add dynamic document titles using i18n in TitleSetter and WithTitle components.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -16,5 +16,8 @@
   "bookPublished": "Published",
   "bookAdded": "Added",
   "annotation": "Annotation",
-  "readMore": "Read more"
+  "routeTitles.books": "New books",
+  "routeTitles.admin": "Admin",
+  "routeTitles.default": "Booksdump",
+  "language": "Language"
 }
