Add translations for header tabs and logout button in Header.tsx.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -23,5 +23,10 @@
   "categorySearch": "Category search",
   "searchItem": "Search",
   "byTitle": "By title",
-  "byAuthor": "By author"
+  "byAuthor": "By author",
+  "booksTab": "Books",
+  "opdsTab": "OPDS",
+  "donateTab": "Donate",
+  "adminTab": "Admin",
+  "logoutButton": "Logout"
 }
