Add routes for searching books by title and author name with localization.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -28,5 +28,7 @@
   "opdsTab": "OPDS",
   "donateTab": "Donate",
   "adminTab": "Admin",
-  "logoutButton": "Logout"
+  "logoutButton": "Logout",
+  "routeByBookName.books": "Search by book name",
+  "routeByAuthorName.books": "Search by author name"
 }
