Update Russian translations and add navigation to AuthorsList component.

--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -20,8 +20,15 @@
   "routeTitles.admin": "Администратор",
   "routeTitles.default": "Booksdump",
   "language": "Язык",
-  "categorySearch": "Поиск по категории",
+  "categorySearch": "Поиск по категориям",
   "searchItem": "Поиск",
   "byTitle": "По названию",
-  "byAuthor": "По автору"
+  "byAuthor": "По автору",
+  "booksTab": "Книги",
+  "opdsTab": "OPDS",
+  "donateTab": "Пожертвования",
+  "adminTab": "Администрирование",
+  "logoutButton": "Выйти",
+  "routeByBookName.books": "Поиск по названию книги",
+  "routeByAuthorName.books": "Поиск по имени автора"
 }
