Add "No author" message for empty authors list in AuthorsList component.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -30,5 +30,6 @@
   "adminTab": "Admin",
   "logoutButton": "Logout",
   "routeByBookName.books": "Search by book name",
-  "routeByAuthorName.books": "Search by author name"
+  "routeByAuthorName.books": "Search by author name",
+  "noAuthor": "No author"
 }
