--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -32,5 +32,7 @@
   "routeByBookName.books": "Search by book name",
   "routeByAuthorName.books": "Search by author name",
   "noAuthor": "No author",
-  "authorsBookSearch": "Search books by author"
+  "authorsBookSearch": "Search books by author",
+  "loginOrPasswordIncorrect": "Login or password is incorrect",
+  "BackButton": "Back"
 }
