Update API endpoints to include /api prefix and improve error handling

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -34,5 +34,6 @@
   "noAuthor": "No author",
   "authorsBookSearch": "Search books by author",
   "loginOrPasswordIncorrect": "Login or password is incorrect",
-  "BackButton": "Back"
+  "BackButton": "Back",
+  "usernameAndPasswordRequired": "Username and password are required"
 }
