Add user info dialog with first and last name fields.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -45,5 +45,8 @@
   "badForm": "Bad form",
   "userExists": "User already exists",
   "registrationError": "Registration error",
-  "invalidUser": "Invalid user"
+  "invalidUser": "Invalid user",
+  "userInfo": "Tell us about yourself",
+  "firstName": "First name",
+  "lastName": "Last name"
 }
