Add dynamic routing and tabs for admin users and invites management.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -58,5 +58,7 @@
   "errorPage.title": "Oops! Something went wrong",
   "errorPage.message": "The page you are looking for might have been removed, had its name changed or is temporarily unavailable.",
   "errorPage.button": "Go to the main page",
-  "noAuthorsFound": "No authors found"
+  "noAuthorsFound": "No authors found",
+  "routeTitles.adminUsers": "Manage users",
+  "routeTitles.adminInvites": "Manage invites"
 }
