Implement user edit functionality with dialog and sorting in UsersTable.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -60,5 +60,9 @@
   "errorPage.button": "Go to the main page",
   "noAuthorsFound": "No authors found",
   "routeTitles.adminUsers": "Manage users",
-  "routeTitles.adminInvites": "Manage invites"
+  "routeTitles.adminInvites": "Manage invites",
+  "edit": "Edit",
+  "editUser": "Edit user",
+  "email": "Email",
+  "token": "Token"
 }
