Refactor BooksList and add BookAnnotation component for cleaner annotations.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -64,5 +64,8 @@
   "edit": "Edit",
   "editUser": "Edit user",
   "email": "Email",
-  "token": "Token"
+  "token": "Token",
+  "categories": "Categories",
+  "routeTitles.error": "Error",
+  "noAnnotations": "No annotations"
 }
