Add new Russian translations and implement language initializer component.

--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -19,6 +19,9 @@
   "routeTitles.books": "Новые книги",
   "routeTitles.admin": "Администратор",
   "routeTitles.default": "Booksdump",
+  "routeTitles.login": "Страница входа",
+  "routeTitles.registration": "Страница регистрации",
+  "routeTitles.forgotPassword": "Страница сброса пароля",
   "language": "Язык",
   "categorySearch": "Поиск по категориям",
   "searchItem": "Поиск",
@@ -30,5 +33,38 @@
   "adminTab": "Администрирование",
   "logoutButton": "Выйти",
   "routeByBookName.books": "Поиск по названию книги",
-  "routeByAuthorName.books": "Поиск по имени автора"
+  "routeByAuthorName.books": "Поиск по имени автора",
+  "noAuthor": "Нет автора",
+  "authorsBookSearch": "Поиск книг по автору",
+  "loginOrPasswordIncorrect": "Логин или пароль неверны",
+  "BackButton": "Назад",
+  "usernameAndPasswordRequired": "Имя пользователя и пароль обязательны",
+  "registration": "Регистрация",
+  "badInvite": "Неверный код приглашения",
+  "badForm": "Некорректная форма",
+  "userExists": "Пользователь уже существует",
+  "registrationError": "Ошибка регистрации",
+  "invalidUser": "Некорректный пользователь",
+  "userInfo": "Расскажите о себе",
+  "firstName": "Имя",
+  "lastName": "Фамилия",
+  "cancel": "Отмена",
+  "save": "Сохранить",
+  "changePassword": "Сменить пароль",
+  "dropSessions": "Завершить все сессии",
+  "oldPassword": "Старый пароль",
+  "newPassword": "Новый пароль",
+  "errorPage.title": "Ой! Что-то пошло не так",
+  "errorPage.message": "Страница, которую вы ищете, возможно, была удалена, её название изменилось или она временно недоступна.",
+  "errorPage.button": "Перейти на главную страницу",
+  "noAuthorsFound": "Авторы не найдены",
+  "routeTitles.adminUsers": "Управление пользователями",
+  "routeTitles.adminInvites": "Управление приглашениями",
+  "edit": "Редактировать",
+  "editUser": "Редактировать пользователя",
+  "email": "Email",
+  "token": "Токен",
+  "categories": "Категории",
+  "routeTitles.error": "Ошибка",
+  "noAnnotations": "Нет аннотаций"
 }
