--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -66,5 +66,13 @@
   "token": "Токен",
   "categories": "Категории",
   "routeTitles.error": "Ошибка",
-  "noAnnotations": "Нет аннотаций"
+  "noAnnotations": "Нет аннотаций",
+  "opdsInfo.title": "Как подключиться к OPDS серверу",
+  "opdsInfo.addCatalog": "Чтобы подключиться к OPDS серверу, добавь каталог https://{{domain}}/opds/ в своё любимое приложение для чтения.",
+  "opdsInfo.testMode": "OPDS находится в тестовом режиме и может иметь проблемы, например, в FBReader. Однако, в целом, он доступен.",
+  "opdsInfo.authorization": "Авторизация в приложении обязательна.",
+  "opdsInfo.alReaderAuth": "В AlReader авторизация указывается через двоеточие, например, username:pass.",
+  "opdsInfo.tlsSupport": "В старых версиях приложений это может не работать, так как они не поддерживают TLS 1.2.",
+  "opdsInfo.pocketBook": "Например, на старых PocketBook ридерах, которые не поддерживают TLS 1.2, OPDS не будет работать.",
+  "opdsInfo.onyxBoox": "На старых устройствах Onyx Boox возникает ошибка null. Это можно исправить, обновив прошивку."
 }
