--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -66,7 +66,7 @@
   "token": "Токен",
   "categories": "Категории",
   "routeTitles.error": "Ошибка",
-  "noAnnotations": "Нет аннотаций",
+  "noAnnotation": "Нет аннотаций",
   "opdsInfo.title": "Как подключиться к OPDS серверу",
   "opdsInfo.addCatalog": "Чтобы подключиться к OPDS серверу, добавь каталог https://{{domain}}/opds/ в своё любимое приложение для чтения.",
   "opdsInfo.testMode": "OPDS находится в тестовом режиме и может иметь проблемы, например, в FBReader. Однако, в целом, он доступен.",
