--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -74,5 +74,6 @@
   "opdsInfo.alReaderAuth": "В AlReader авторизация указывается через двоеточие, например, username:pass.",
   "opdsInfo.tlsSupport": "В старых версиях приложений это может не работать, так как они не поддерживают TLS 1.2.",
   "opdsInfo.pocketBook": "Например, на старых PocketBook ридерах, которые не поддерживают TLS 1.2, OPDS не будет работать.",
-  "opdsInfo.onyxBoox": "На старых устройствах Onyx Boox возникает ошибка null. Это можно исправить, обновив прошивку."
+  "opdsInfo.onyxBoox": "На старых устройствах Onyx Boox возникает ошибка null. Это можно исправить, обновив прошивку.",
+  "routeByAuthor.books": "Поиск книг у автора"
 }
