Handle invalid dates in BooksList and add translations for "Unknown date".

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -77,5 +77,6 @@
   "opdsInfo.tlsSupport": "In older versions of applications, it may not work because they do not support TLS 1.2.",
   "opdsInfo.pocketBook": "For example, on older PocketBook readers that do not support TLS 1.2, OPDS will not work.",
   "opdsInfo.onyxBoox": "On older Onyx Boox devices, it gives a null error. This can be fixed by updating the firmware.",
-  "authorsSearch": "Search authors"
+  "authorsSearch": "Search authors",
+  "unknownDate": "Unknown date"
 }
