--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -76,5 +76,6 @@
   "opdsInfo.pocketBook": "Например, на старых PocketBook ридерах, которые не поддерживают TLS 1.2, OPDS не будет работать.",
   "opdsInfo.onyxBoox": "На старых устройствах Onyx Boox возникает ошибка null. Это можно исправить, обновив прошивку.",
   "routeByAuthor.books": "Поиск книг у автора",
-  "authorsSearch": "Поиск авторов"
+  "authorsSearch": "Поиск авторов",
+  "unknownDate": "Дата неизвестна"
 }
