Add translation for "inviteCode" in Russian localization file.

--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -86,5 +86,6 @@
   "activationSuccess": "Ваш аккаунт активирован. Теперь вы можете войти.",
   "routeTitles.activation": "Активация аккаунта",
   "activation": "Статус активации",
-  "registrationSuccess": "Регистрация прошла успешно. Ссылка для активации отправлена на ваш email."
+  "registrationSuccess": "Регистрация прошла успешно. Ссылка для активации отправлена на ваш email.",
+  "inviteCode": "Инвайт-код"
 }
