Add error handling for specific login errors and update translations.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -88,5 +88,8 @@
   "routeTitles.activation": "Activation",
   "activation": "Activation status",
   "registrationSuccess": "Registration successful. Check your email for further instructions.",
-  "usernameRegistration": "Username"
+  "usernameRegistration": "Username",
+  "badPassword": "Invalid password",
+  "userNotActive": "User is not active",
+  "badCredentials": "Bad credentials"
 }
