Add "delete user" column to UsersTable and update translations.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -91,5 +91,6 @@
   "usernameRegistration": "Username",
   "badPassword": "Invalid password",
   "userNotActive": "User is not active",
-  "badCredentials": "Bad credentials"
+  "badCredentials": "Bad credentials",
+  "deleteUser": "Delete user"
 }
