--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -92,5 +92,17 @@
   "badPassword": "Неверный пароль",
   "userNotActive": "Пользователь не активен",
   "badCredentials": "Неверные учётные данные",
-  "deleteUser": "Удалить пользователя"
+  "deleteUser": "Удалить пользователя",
+  "invites": "Приглашения",
+  "userId": "ID пользователя",
+  "user": "Пользователь",
+  "active": "Активен",
+  "superuser": "Суперпользователь",
+  "dateJoined": "Дата регистрации",
+  "lastLogin": "Последний вход",
+  "inviteId": "ID приглашения",
+  "beforeDate": "Действительно до",
+  "actions": "Действия",
+  "addInvite": "Добавить приглашение",
+  "users": "Пользователи"
 }
