--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -124,5 +124,7 @@
   "routeTitles.privateCollections": "Private collections",
   "areYouSureYouWantToDeleteThisCollection": "Are you sure you want to delete this collection?",
   "delete": "Delete",
-  "confirmDeleteCollection": "Delete collection"
+  "confirmDeleteCollection": "Delete collection",
+  "noBooksInstruction": "There are no books in this collection yet. To add books, use the search to find them, and then add them to your collection using the button that appears on the book cards.",
+  "publicSwitchInstruction": "Add 2 or more books to activate."
 }
