--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -126,5 +126,8 @@
   "delete": "Удалить",
   "confirmDeleteCollection": "Удалить коллекцию",
   "noBooksInstruction": "В этой коллекции пока нет книг. Чтобы добавить книги, воспользуйтесь поиском и добавьте их в коллекцию через кнопку, которая появится на карточках книг.",
-  "publicSwitchInstruction": "Добавьте 2 или больше книг для активации."
+  "publicSwitchInstruction": "Добавьте 2 или больше книг для активации.",
+  "collection": "Коллекция",
+  "collectionUpdated": "Коллекция обновлена",
+  "downloadCollectionInFormat": "Скачать всю коллекцию в формате"
 }
