Add favorite book success and error messages in both English and Russian locales.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -129,5 +129,9 @@
   "publicSwitchInstruction": "Add 2 or more books to activate.",
   "collection": "Collection",
   "collectionUpdated": "Collection updated",
-  "downloadCollectionInFormat": "Download collection in format"
+  "downloadCollectionInFormat": "Download collection in format",
+  "bookFavRemovedSuccessfully": "Book removed from favorites",
+  "bookFavAddedSuccessfully": "Book added to favorites",
+  "errorRemovingFavorite": "Error removing favorite",
+  "errorAddingFavorite": "Error adding favorite"
 }
