--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -129,5 +129,9 @@
   "publicSwitchInstruction": "Добавьте 2 или больше книг для активации.",
   "collection": "Коллекция",
   "collectionUpdated": "Коллекция обновлена",
-  "downloadCollectionInFormat": "Скачать всю коллекцию в формате"
+  "downloadCollectionInFormat": "Скачать всю коллекцию в формате",
+  "bookFavRemovedSuccessfully": "Книга удалена из избранного",
+  "bookFavAddedSuccessfully": "Книга добавлена в избранное",
+  "errorRemovingFavorite": "Ошибка удаления из избранного",
+  "errorAddingFavorite": "Ошибка добавления в избранное"
 }
