Replace Snackbar with Backdrop for conversion status display.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -135,5 +135,6 @@
   "errorRemovingFavorite": "Error removing favorite",
   "errorAddingFavorite": "Error adding favorite",
   "routeByCategory.books": "Search by category",
-  "convertingBooks": "Converting books. Wait a moment."
+  "conversionInProgress": "Conversion in progress",
+  "pleaseWait": "Please wait"
 }
