Add email address field and implement autocomplete suggestions feature.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -50,6 +50,7 @@
   "userInfo": "Tell us about yourself",
   "firstName": "First name",
   "lastName": "Last name",
+  "emailAddress": "Email address",
   "cancel": "Cancel",
   "save": "Save",
   "changePassword": "Change password",
