--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -48,6 +48,12 @@
   "userInfo": "Расскажите о себе",
   "firstName": "Имя",
   "lastName": "Фамилия",
+  "emailAddress": "Email адрес",
+  "loading": "Загрузка...",
+  "typeToSearch": "Введите минимум 2 символа для поиска",
+  "noOptions": "Предложения не найдены",
+  "book": "Книга",
+  "author": "Автор",
   "cancel": "Отмена",
   "save": "Сохранить",
   "changePassword": "Сменить пароль",
